Fix root el overflow issue on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -74,6 +74,8 @@ $selectionColors: #fbb4ae, #b3cde3, #ccebc5, #decbe4, #fed9a6, #ffffcc;
 * {
   color: $text-color;
   -webkit-font-smoothing: subpixel-antialiased;
+
+  overflow-wrap: break-word; // Required to prevent strange overflow on root el in mobile
 }
 
 a {
